add more instructions in  README, add portuguese translations

--- a/src/locale/translations/en.json
+++ b/src/locale/translations/en.json
@@ -75,8 +75,10 @@
     "Title": "Language",
     "En": "English (Canada)",
     "Fr": "Français (Canada)",
+    "Pt": "Portuguese",
     "EnShort": "English",
     "FrShort": "Français",
+    "PtShort": "Portuguese",
     "Close": "Back"
   },
   "Tutorial": {
