--- a/src/locale/translations/pt.json
+++ b/src/locale/translations/pt.json
@@ -90,7 +90,7 @@
     "step-3": "Notifique anonimamente as pessoas que estiveram perto de você nos últimos 14 dias de que elas possivelmente foram expostas.",
     "ActionBack": "Voltar",
     "ActionNext": "Próximo",
-    "ActionEnd": "Done",
+    "ActionEnd": "Concluir",
     "Close": "Fechar"
   },
   "Sharing": {
@@ -104,7 +104,7 @@
   },
   "Onboarding": {
     "ActionNext": "Próximo",
-    "ActionEnd": "Done",
+    "ActionEnd": "Concluir",
     "ActionBack": "Voltar"
   },
   "OnboardingPermissions": {
