corrected the accent in Canadá

--- a/src/locale/translations/pt.json
+++ b/src/locale/translations/pt.json
@@ -73,8 +73,8 @@
   },
   "LanguageSelect": {
     "Title": "Idioma",
-    "En": "Inglês (Canada)",
-    "Fr": "Francês (Canada)",
+    "En": "Inglês (Canadá)",
+    "Fr": "Francês (Canadá)",
     "Pt": "Português",
     "EnShort": "Inglês",
     "FrShort": "Francês",
