update pt to pt-BR

--- a/src/locale/translations/en.json
+++ b/src/locale/translations/en.json
@@ -75,10 +75,10 @@
     "Title": "Language",
     "En": "English (Canada)",
     "Fr": "Français (Canada)",
-    "Pt": "Portuguese",
+    "PtBR": "Portuguese (Brazil)",
     "EnShort": "English",
     "FrShort": "Français",
-    "PtShort": "Portuguese",
+    "PtBRShort": "Portuguese (Brazil)",
     "Close": "Back"
   },
   "Tutorial": {
