--- a/src/locale/translations/pt-BR.json
+++ b/src/locale/translations/pt-BR.json
@@ -156,6 +156,6 @@
     "Label": "Desenvolvido em parceria com"
   },
   "BottomSheet": {
-    "Collapse": "Collapse"
+    "Collapse": "Ocultar"
   }
 }
