Ran it through a German spell/grammar checker

--- a/src/locale/translations/de.json
+++ b/src/locale/translations/de.json
@@ -6,7 +6,7 @@
     "ExposureDetectedDetailed": "Den zufälligen IDs nach zu urteilen, warst du in den letzten 14 Tagen in der Nähe einer Person, die positiv auf COVID-19 getestet wurde. ",
     "SeeGuidance": "Lies die kanadische COVID-19 Handlungsempfehlung",
     "GuidanceUrl": "https://www.canada.ca/en/public-health/services/publications/diseases-conditions/covid-19-how-to-isolate-at-home.html",
-    "SignalDataShared": "Danke, dass du hilst die Ausbreitung zu verlangsamen.",
+    "SignalDataShared": "Danke, dass du hilfst die Ausbreitung zu verlangsamen.",
     "SignalDataSharedDetailed": {
       "One": "Du bekommst eine Nachricht, die dich fragt deine zufälligen IDs zu teilen, im Laufe des nächsten Tages",
       "Other": "Du bekommst täglich eine Nachricht, die dich fragt deine zufälligen IDs zu teilen, für die nächsten {number} Tage"
@@ -14,13 +14,13 @@
     "SignalDataSharedCTA": "Verfolge deine Symptome",
     "SymptomTrackerUrl": "https://ca.thrive.health/covid19app/action/88a5e9a7-db9e-487b-bc87-ce35035f8e5c?from=/home&navigateTo=/tracker/complete",
     "DailyShare": "Teile deine neuen zufälligen IDs",
-    "DailyShareDetailed": "Das Teilen deiner Daten hilft anderen herauszufinden ob sie mit COVID-19 in Kontakt kamen.",
+    "DailyShareDetailed": "Das Teilen deiner Daten hilft anderen herauszufinden, ob sie mit COVID-19 in Kontakt kamen.",
     "ShareRandomIDsCTA": "Teile deine zufälligen IDs",
     "BluetoothDisabled": "Bluetooth ist ausgeschaltet",
     "EnableBluetoothCTA": "COVID Shield benötigt Bluetooth um zufällige IDs zu teilen und sammeln.",
     "TurnOnBluetooth": "Bluetooth anschalten",
-    "ExposureNotificationsDisabled": "COVID-19 Kontakt Benachrichtungen sind aus",
-    "ExposureNotificationsDisabledDetailed": "COVID-19 Kontakt Benachrichtungen werden benötigt damit COVID Shield funktioniert.",
+    "ExposureNotificationsDisabled": "COVID-19 Kontakt Benachrichtigungen sind aus",
+    "ExposureNotificationsDisabledDetailed": "COVID-19 Kontakt Benachrichtigungen werden benötigt, damit COVID Shield funktioniert.",
     "EnableExposureNotificationsCTA": "Schalte COVID-19 Kontakt Benachrichtigungen ein",
     "NoConnectivity": "Keine Internetverbindung",
     "NoConnectivityDetailed": "COVID Shield benötigt eine Internetverbindung um mögliche Kontakte zu finden.",
@@ -52,11 +52,11 @@
     "BluetoothCardBody": "COVID Shield benötigt Bluetooth um zufällige IDs zu teilen und sammeln.",
     "BluetoothCardAction": "Schalte Bluetooth ein",
     "EnterCodeCardTitle": "COVID Shield Code",
-    "EnterCodeCardBody": "Hat ein Gesundheitsexperte dich gefragt deinen COVID Shield code einzugeben?",
+    "EnterCodeCardBody": "Hat ein Gesundheitsexperte dich gefragt deinen COVID Shield Code einzugeben?",
     "EnterCodeCardAction": "Code eingeben",
-    "NotificationCardStatus": "Push Nachrichten sind ",
+    "NotificationCardStatus": "Pushnachrichten sind ",
     "NotificationCardStatusOff": "AUS",
-    "NotificationCardBody": "Du wirst keine Push Nachrichten bekommen, wenn du eventuell mit COVID-19 in Kontakt kamst. Zeitnahe Benachrichtung über potenziellen Kontakt is wichtig um die Ausbreitung von COVID-19 zu verlangsamen",
+    "NotificationCardBody": "Du wirst keine Pushnachrichten bekommen, wenn du eventuell mit COVID-19 in Kontakt kamst. Zeitnahe Benachrichtigung über potenziellen Kontakt is wichtig um die Ausbreitung von COVID-19 zu verlangsamen",
     "NotificationCardAction": "Schalte Push Nachrichten",
     "ExposureNotificationCardStatus": "COVID-19 Kontakt Benachrichtigungen sind ",
     "ExposureNotificationCardStatusOff": "AUS",
@@ -85,9 +85,9 @@
     "step-1Title": "Wie COVID Shield funktioniert",
     "step-1": "Dein Handy benutzt Bluetooth um zufällige IDs mit Handys, die in deiner Nähe sind und die App installiert, zu teilen und sammeln. Diese IDs werden sicher und nur auf jedem Handy gespeichert.",
     "step-2Title": "Wenn du potenziell Kontakt COVID-19 hattest.",
-    "step-2": "Wenn du dich in den letzten 14 Tagen in der Nähe einer Person aufgehalten hast, die COVID-19 positiv ist, wirst du benachrichtig.",
+    "step-2": "Wenn du dich in den letzten 14 Tagen in der Nähe einer Person aufgehalten hast, die COVID-19 positiv ist, wirst du benachrichtigt.",
     "step-3Title": "Wenn du positiv auf COVID-19 getestet wurdest",
-    "step-3": "Benachrichtige andere, die sich in den letzen 14 Tagen in deiner Nähe aufgehalten haben, anonym darüber, dass sie eventuell Kontakt mit COVID-19 hatten.",
+    "step-3": "Benachrichtige andere, die sich in den letzten 14 Tagen in deiner Nähe aufgehalten haben, anonym darüber, dass sie eventuell Kontakt mit COVID-19 hatten.",
     "ActionBack": "Zurück",
     "ActionNext": "Weiter",
     "ActionEnd": "Fertig",
@@ -95,7 +95,7 @@
   },
   "Sharing": {
     "Title": "App teilen",
-    "SubTitle": "Jede Person die COVID Shield benutzt hilft die Ausbreitung von COVID-19 zu verlangsamen. Beim Teilen werden keine persönlichen Informationen preisgegeben.",
+    "SubTitle": "Jede Person, die COVID Shield benutzt, hilft die Ausbreitung von COVID-19 zu verlangsamen. Beim Teilen werden keine persönlichen Informationen preisgegeben.",
     "Platform-messages": "Bei Messages teilen",
     "Platform-instagram": "Bei Instagram teilen",
     "More": "Mehr Apps",
@@ -115,7 +115,7 @@
   },
   "OnboardingStart": {
     "Title": "Schütze dich und andere",
-    "Body1": "Werde benachrichtigt wenn du potenziell mit COVID-19 in Kontakt kamst.",
+    "Body1": "Werde benachrichtigt, wenn du potenziell mit COVID-19 in Kontakt kamst.",
     "Body2": "Wenn du COVID-19 positiv getestet wurdest, kannst du anonym deine Daten teilen, sodass andere über potenzielle Ansteckung informiert werden können.",
     "TutorialAction": "Erfahre wie COVID Shield funktioniert"
   },
@@ -130,13 +130,13 @@
   },
   "DataUpload": {
     "Cancel": "Abbrechen",
-    "FormIntro": "Bitte gib deinen 8 stelligen COVID Shield Code ein.",
+    "FormIntro": "Bitte gib deinen 8-stelligen COVID Shield Code ein.",
     "Action": "Code abschicken",
     "InfoSmall": "Deine zufälligen IDs werden nicht geteilt, bis du im nächsten Schritt zustimmst.",
     "ConsentTitle": "Teile deine zufälligen IDs",
     "ConsentBody": "Ein Gesundheitsexperte hat dir erlaubt deine zufälligen IDs zu teilen.",
     "ConsentBody2": "Wenn du zufällige IDs teilst, können andere die sich in der Vergangenheit in deiner Nähe aufgehalten haben eine Nachricht erhalten. Diese Nachricht ist anonym und enthält keine Information über dich.",
-    "ConsentBody3": "Du wirst täglich daran erinnert, deine neuen zufälligen IDs zu teilen. Du musst jedes mal zustimmen, um zu teilen. Teilen passiert freiwillig.",
+    "ConsentBody3": "Du wirst täglich daran erinnert, deine neuen zufälligen IDs zu teilen. Du musst jedes Mal zustimmen, um zu teilen. Teilen passiert freiwillig.",
     "PrivacyPolicyLink": "Datenschutzerklärung lesen",
     "ConsentAction": "Zustimmen",
     "ShareToast": "Zufällige IDs erfolgreich geteilt",
@@ -150,7 +150,7 @@
     "OffMessageTitle": "COVID Shield ist aus",
     "OffMessageBody": "Schalte COVID Shield ein um benachrichtigt zu werden wenn du eventuell Kontakt mit COVID-19 hast.",
     "DailyUploadNotificationTitle": "Teile deine neuen zufälligen IDs",
-    "DailyUploadNotificationBody": "Das Teilen deiner Daten hilft anderen zu wissen ob sie eventuell Kontakt mit COVID-19 hatten."
+    "DailyUploadNotificationBody": "Das Teilen deiner Daten hilft anderen zu wissen, ob sie eventuell Kontakt mit COVID-19 hatten."
   },
   "Partners": {
     "Label": "Entwickelt in Partnerschaft mit"
