--- a/src/locale/translations/en.json
+++ b/src/locale/translations/en.json
@@ -163,22 +163,16 @@
     "OffStatus": "Covid Shield is off, Tap for more information"
   },
   "RegionPicker": {
-    "Title": "Select your province or territory",
+    "Title": "Select your Institution",
     "Body": "This helps give you more relevant guidance.\nThis information is only stored on your device and will never be shared with anyone else.",
     "Skip": "Skip",
     "GetStarted": "Get started",
-    "AB": "Alberta",
-    "BC": "British Columbia",
-    "MB": "Manitoba",
-    "NB": "New Brunswick",
-    "NL": "Newfoundland and Labrador",
-    "NT": "Northwest Territories",
-    "NS": "Nova Scotia",
-    "NU": "Nunavut",
-    "ON": "Ontario",
-    "PE": "Prince Edward Island",
-    "QC": "Quebec",
-    "SK": "Saskatchewan",
-    "YT": "Yukon"
+    "GSU": "Georgia State University",
+    "GST": "Georgia Southern University",
+    "GT": "Georgia Tech",
+    "KSU": "Kennesaw State University",
+    "UGA": "University of Georgia",
+    "UWG": "University of West Georgia",
+    "VSU": "Valdosta State University",
   }
 }
