--- a/src/locale/translations/fr.json
+++ b/src/locale/translations/fr.json
@@ -55,9 +55,9 @@
     "EnterCodeCardTitle": "Code COVID Shield",
     "EnterCodeCardBody": "Un professionel de la santé vous a-t-il demandé d'entrer un code COVID Shield?",
     "EnterCodeCardAction": "Entrez le code",
-    "ShareIDsCardTitle": "Help to slow the spread ",
-    "ShareIDsCardBody": "Share your random IDs to help others know if they have possibly been exposed to COVID-19. ",
-    "ShareIDsCardAction": "Share ",
+    "ShareIDsCardTitle": "Aidez à prévenir la transmission",
+    "ShareIDsCardBody": "Partagez vos identifiants aléatoires pour aider les autres à savoir s'ils ont possiblement été exposés à la COVID-19.",
+    "ShareIDsCardAction": "Partager",
     "NotificationCardStatus": "Les notifications poussées sont ",
     "NotificationCardStatusOff": "DÉSACTIVÉES",
     "NotificationCardBody": "Vous ne recevrez pas de notifications poussées si vous avez possiblement été exposé(e) à la COVID-19. Les notifications spontanées sont importantes pour aider à ralentir la transmission de la COVID-19.",
@@ -149,8 +149,8 @@
     "ErrorTitle": "Code non reconnu",
     "ErrorBody": "Votre code COVID Shield n'a pas pu être reconnu. Essayez de nouveau.",
     "ErrorAction": "OK",
-    "PermissionsErrorTitle": "Loading error ",
-    "PermissionsErrorBody": "A problem occurred while sharing your random IDs. Please try again. ",
+    "PermissionsErrorTitle": "Erreur de chargement",
+    "PermissionsErrorBody": "Un problème est survenu pendant le partage de vos identifiants aléatoires. Veuillez essayer à nouveau.",
     "PermissionsErrorAction": "OK "
   },
   "Notification": {
